tdf#125573 Scale text to path for TextWarp, use fromWordArt

LO uses not exactly the algorithm from DrawingML for Warp, but using
'ScaleX=false' gives similar results. MS Office uses scaling to path
too for legacy shapes from category 'Follow Path', which were
imported from binary ppt. It sets attribute 'fromWordArt' in that
cases. This attribute is now interpreted on import and generated on
export. Only in case of new 'Follow Path' shapes, the text is not
scaled. 'ScaleX=true' is used in that case.

Change-Id: I6fbc02eda436ef3bbc44783a16d79ce4bcd66f29